--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="assets/lib/angular-aria.min.js"></script>
     <script type="text/javascript" src="assets/lib/angular-animate.min.js"></script>
     <script type="text/javascript" src="assets/lib/ngStorage.min.js"></script>
-    <!--script type="text/javascript" src="assets/lib/ngTouch.min.js"></script-->
+    <script type="text/javascript" src="assets/lib/ngTouch.min.js"></script>
 
     <!-- Angular Material -->
     <script type="text/javascript" src="assets/lib/angular-material-icons.js"></script>
