--- a/www/index.html
+++ b/www/index.html
@@ -1,56 +1,89 @@
 <!DOCTYPE html>
 <html ng-app="ngapp">
 
-  <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="Content-Security-Policy">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <head>
+        <meta charset="utf-8"/>
+        <meta http-equiv="Content-Security-Policy">
+        <meta name="format-detection" content="telephone=no">
+        <meta name="msapplication-tap-highlight" content="no">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/angular-material.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/angular-material.css">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/angular-material-icons.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/angular-material-icons.css">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700">
 
-    <!-- AngularJs -->
-    <script type="text/javascript" src="assets/lib/angular.min.js"></script>
-    <script type="text/javascript" src="assets/lib/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="assets/lib/angular-aria.min.js"></script>
-    <script type="text/javascript" src="assets/lib/angular-animate.min.js"></script>
-    <script type="text/javascript" src="assets/lib/ngStorage.min.js"></script>
-    <script type="text/javascript" src="assets/lib/ngTouch.min.js"></script>
+        <!-- AngularJs -->
+        <script type="text/javascript" src="assets/lib/angular.min.js"></script>
+        <script type="text/javascript" src="assets/lib/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="assets/lib/angular-aria.min.js"></script>
+        <script type="text/javascript" src="assets/lib/angular-animate.min.js"></script>
+        <script type="text/javascript" src="assets/lib/ngStorage.min.js"></script>
+        <script type="text/javascript" src="assets/lib/ngTouch.min.js"></script>
 
-    <!-- Angular Material -->
-    <script type="text/javascript" src="assets/lib/angular-material-icons.js"></script>
-    <script type="text/javascript" src="assets/lib/angular-material.js"></script>
+        <!-- Angular Material -->
+        <script type="text/javascript" src="assets/lib/angular-material-icons.js"></script>
+        <script type="text/javascript" src="assets/lib/angular-material.js"></script>
 
-    <!-- Cordova -->
-    <script type="text/javascript" src="assets/lib/ng-cordova.min.js"></script>
-    <script src="cordova.js"></script>
+        <!-- Cordova -->
+        <script type="text/javascript" src="assets/lib/ng-cordova.min.js"></script>
+        <script src="cordova.js"></script>
 
-    <!-- Modules -->
-    <script type="text/javascript" src="app/app.js"></script>
+        <!-- Modules -->
+        <script type="text/javascript" src="app/app.js"></script>
 
-    <!-- Routes -->
-    <script type="text/javascript" src="app/routes.js"></script>
+        <!-- Routes -->
+        <script type="text/javascript" src="app/routes.js"></script>
 
-    <!-- Services -->
-    <script type="text/javascript" src="app/shared/shared-service.js"></script>
+        <!-- Services -->
+        <script type="text/javascript" src="app/shared/shared-service.js"></script>
 
-    <!-- Controllers -->
-    <script type="text/javascript" src="app/components/main/main-controller.js"></script>
+        <!-- Controllers -->
+        <script type="text/javascript" src="app/shared/navigationbar-controller.js"></script>
+        <script type="text/javascript" src="app/components/main/main-controller.js"></script>
 
-    <title>NgApp</title>
-  </head>
+        <title>NgApp</title>
+    </head>
+    <body style="position: absolute;"  ng-controller="NavBarController as navBar" ng-cloak>
+        
+        <style>
+            md-toolbar div {
+                color: white;
+            }
+        </style>
+      
+        <md-toolbar flex>
+            <div class="md-toolbar-tools">
+                <md-button class="md-icon-button" aria-label="Menu" ng-click="navBar.openSideNav()">
+                    <ng-md-icon icon="menu"></ng-md-icon>
+                </md-button>
+                <h2>
+                    <span>Dungeons & Dices</span>
+                </h2>
+            </div>
+        </md-toolbar>
 
-  <body style="position: fixed;" ng-cloak>
+        <md-sidenav class="md-sidenav-left" md-component-id="left">
+            <md-toolbar>
+                <div class="md-toolbar-tools">
+                    <h2>
+                        <span>SideNav Menu</span>
+                    </h2>
+                </div>
+            </md-toolbar>
+            <md-list ng-cloak>
+                <md-list-item ng-href="http://www.google.com/design/spec/material-design/introduction.html">
+                    <ng-md-icon icon="school"></ng-md-icon>
+                    <p>Material Design</p>
+                </md-list-item>
+            </md-list>
+        </md-sidenav>
 
-    <ui-view></ui-view>
+        <ui-view></ui-view>
 
-  </body>
+    </body>
 </html>
