--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
         <!-- Controllers -->
         <script type="text/javascript" src="app/components/main/main-controller.js"></script>
         
-        <title>Polymer Starter Kit</title>
+        <title>Dungeons&Dices</title>
     </head>
 
     <body unresolved>
@@ -55,19 +55,20 @@
             </paper-header-panel>
 
             <!-- Main Area -->
-            <paper-header-panel main id="headerPanelMain">
+            <paper-scroll-header-panel fixed main>
                 <!-- Main Toolbar -->
                 <paper-toolbar id="mainToolbar">
                     <paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
 
                     <!-- Application name -->
-                    <div class="app-name">Cordova-Angular-Polymer-Seed</div>
+                    <div class="app-name">Dungeons & Dices</div>
+                    <img ng-src="assets/img/dices.png" />
                 </paper-toolbar>
 
                 <!-- Main Content -->
                 <ui-view></ui-view>
                 
-            </paper-header-panel>
+            </paper-scroll-header-panel>
         </paper-drawer-panel>
     </body>
 </html>
