--- a/www/index.html
+++ b/www/index.html
@@ -15,12 +15,12 @@
         <style is="custom-style" include="shared-styles"></style>
         
         <!-- AngularJs -->
-        <script type="text/javascript" src="assets/js/angular.min.js"></script>
-        <script type="text/javascript" src="assets/js/angular-ui-router.min.js"></script>
-        <script type="text/javascript" src="assets/js/ngStorage.min.js"></script>
+        <script type="text/javascript" src="assets/lib/angular.min.js"></script>
+        <script type="text/javascript" src="assets/lib/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="assets/lib/ngStorage.min.js"></script>
 
         <!-- Cordova -->
-        <script type="text/javascript" src="assets/js/ng-cordova.min.js"></script>
+        <script type="text/javascript" src="assets/lib/ng-cordova.min.js"></script>
         <script src="cordova.js"></script>
 
         <!-- Modules -->
