--- a/www/app/routing.html
+++ b/www/app/routing.html
@@ -27,8 +27,12 @@
       app.route = 'home';
     });
 
-    page('/teste', function() {
-      app.route = 'teste';
+    page('/sheetDetail', function() {
+      app.route = 'sheetDetail';
+    });
+      
+    page('/sheetCreation', function() {
+      app.route = 'sheetCreation';
     });
 
     // 404
