--- a/www/index.html
+++ b/www/index.html
@@ -40,9 +40,9 @@
 
                     <!-- Drawer Content -->
                     <paper-menu>
-                        <a href="https://www.polymer-project.org/1.0/">
+                        <a href="/home">
                             <iron-icon icon="home"></iron-icon>
-                            <span>Polymer Project</span>
+                            <span>Sheet List</span>
                         </a>
                     </paper-menu>
                 </paper-header-panel>
@@ -63,8 +63,11 @@
                         <section data-route="home">
                             <sheet-list></sheet-list>
                         </section>
-                        <section data-route="teste">
-                            <h1>Test</h1>
+                        <section data-route="sheetDetail">
+                            <h1>sheetDetail</h1>
+                        </section>
+                        <section data-route="sheetCreation">
+                            <h1>sheetCreation</h1>
                         </section>
                     </iron-pages>
 
