--- a/www/assets/css/app-theme.html
+++ b/www/assets/css/app-theme.html
@@ -90,6 +90,10 @@
         min-height: 48px;
         padding: 0 16px;
     }
+    
+    .paper-menu-0 .selectable-content.paper-menu > .iron-selected {
+        font-weight: 400;
+    }
 
     #mainToolbar {
         @apply(--layout-horizontal);
