--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
         <!-- Custom Elements -->
         <link rel="import" href="app/components/main/sheet-card.html">
         <link rel="import" href="app/components/main/sheet-list.html">
+        <link rel="import" href="app/components/sheet-creation/sheet-creation.html">
 
         <!-- Cordova -->
         <!--script src="cordova.js"></script-->
@@ -67,7 +68,7 @@
                             <h1>sheetDetail</h1>
                         </section>
                         <section data-route="sheetCreation">
-                            <h1>sheetCreation</h1>
+                            <sheet-creation></sheet-creation>
                         </section>
                     </iron-pages>
 
