--- a/www/assets/css/elements.html
+++ b/www/assets/css/elements.html
@@ -19,6 +19,7 @@
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 
 <!-- Add your elements here -->
 <link rel="import" href="app-theme.html">
