--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
         <link rel="import" href="app/components/main/sheet-card.html">
         <link rel="import" href="app/components/main/sheet-list.html">
         <link rel="import" href="app/components/sheet-creation/sheet-creation.html">
+        <link rel="import" href="app/components/sheet-creation/basic-tab.html">
 
         <!-- Cordova -->
         <!--script src="cordova.js"></script-->
