--- a/www/assets/css/app-theme.html
+++ b/www/assets/css/app-theme.html
@@ -39,6 +39,12 @@
         @apply(--layout-vertical);
         @apply(--layout-flex);
     }
+    
+    iron-pages {
+        width: 100%;
+        height: 100%;
+        padding: 0 !important;
+    }
 
     .space {
         @apply(--layout-flex);
