--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,10 @@
         <link rel="import" href="app/components/main/sheet-list.html">
         <link rel="import" href="app/components/sheet-creation/sheet-creation.html">
         <link rel="import" href="app/components/sheet-creation/basic-tab.html">
+        <link rel="import" href="app/components/sheet-creation/status-tab.html">
+        <link rel="import" href="app/components/sheet-creation/status-card.html">
+        <link rel="import" href="app/components/sheet-creation/resources-tab.html">
+        <link rel="import" href="app/components/sheet-creation/resources-card.html">
 
         <!-- Cordova -->
         <!--script src="cordova.js"></script-->
