Update (Maybe test only)

--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
         <!-- Cordova -->
         <!--script src="cordova.js"></script-->
         
-        <title>DungeonsDices</title>
+        <title>Dungeons & Dices</title>
     </head>
 
     <body unresolved>
