Sheet Creation - Defenses
Add Defenses-Tab
Add Defenses-Card
Update Resources Tab

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,8 @@
         <link rel="import" href="app/components/sheet-creation/status-card.html">
         <link rel="import" href="app/components/sheet-creation/resources-tab.html">
         <link rel="import" href="app/components/sheet-creation/resources-card.html">
+        <link rel="import" href="app/components/sheet-creation/defenses-tab.html">
+        <link rel="import" href="app/components/sheet-creation/defenses-card.html">
 
         <!-- Cordova -->
         <!--script src="cordova.js"></script-->
