--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,8 @@
         <link rel="import" href="app/components/sheet-creation/resources-card.html">
         <link rel="import" href="app/components/sheet-creation/defenses-tab.html">
         <link rel="import" href="app/components/sheet-creation/defenses-card.html">
+        <link rel="import" href="app/components/sheet-creation/skills-tab.html">
+        <link rel="import" href="app/components/sheet-creation/skills-card.html">
 
         <!-- Cordova -->
         <!--script src="cordova.js"></script-->
