--- a/www/app/dungeons-dices.html
+++ b/www/app/dungeons-dices.html
@@ -203,14 +203,14 @@
             this.sheetList = [
                 {
                     name: "Marad",
-                    class: "Paladino",
+                    job: "Paladino",
                     race: "Draenei",
                     level: 100,
                     system: "WoWTable"
                 },
                 {
                     name: "Bilbo",
-                    class: "Ladino",
+                    job: "Ladino",
                     race: "Hobbit",
                     level: 10,
                     system: "LotR RPG"
