--- a/www/assets/css/elements.html
+++ b/www/assets/css/elements.html
@@ -32,5 +32,5 @@
 <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
 
 <!-- Add your elements here -->
-<link rel="import" href="app-theme.html">
-<link rel="import" href="shared-styles.html">
+<!--link rel="import" href="app-theme.html"-->
+<!--link rel="import" href="shared-styles.html"-->
