--- a/assets/css/elements.html
+++ b/assets/css/elements.html
@@ -30,6 +30,7 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 
 <!-- Custom elements -->
 <link rel="import" href="../../app/dungeons-dices.html">
