--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
         <link rel="import" href="assets/bower_components/polymer/polymer.html">
 
-        <link rel="import" href="assets/css/elements.html">        
+        <link rel="import" href="assets/css/elements.html">
 
-        <title>DungeonsDices</title>
+        <title>Dungeon 'n Dices</title>
     </head>
 
     <body unresolved>
-        <dungeons-dices></dungeons-dices>
+        <dungeon-dices></dungeons-dices>
     </body>
 </html>
