Sheet Detail Intial

--- a/app/dungeons-dices.html
+++ b/app/dungeons-dices.html
@@ -16,6 +16,7 @@
                 --light-accent-color: #ff80ab;
                 --dark-accent-color: #f50057;
                 --paper-fab-keyboard-focus-background: #03A9F4;
+                --paper-tabs-selection-bar-color: #03A9F4;
             }
 
             paper-menu {
