--- a/assets/css/elements.html
+++ b/assets/css/elements.html
@@ -33,7 +33,7 @@
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 
 <!-- Custom elements -->
-<link rel="import" href="../../app/dungeons-dices.html">
+<link rel="import" href="../../app/dungeon-dices.html">
 <link rel="import" href="../../app/components/main/sheet-card.html">
 <link rel="import" href="../../app/components/main/sheet-list.html">
 <link rel="import" href="../../app/components/sheet-creation/sheet-creation.html">
@@ -46,3 +46,5 @@
 <link rel="import" href="../../app/components/sheet-creation/defenses-card.html">
 <link rel="import" href="../../app/components/sheet-creation/skills-tab.html">
 <link rel="import" href="../../app/components/sheet-creation/skills-card.html">
+<link rel="import" href="../../app/components/sheet-detail/sheet-detail.html">
+<link rel="import" href="../../app/components/sheet-detail/resorceslist-card.html">
