--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </head>
 
     <body unresolved>
-        <dungeon-dices></dungeons-dices>
+        <dungeon-dices></dungeon-dices>
     </body>
 </html>
