Sheet Detail RC

--- a/assets/css/elements.html
+++ b/assets/css/elements.html
@@ -47,4 +47,8 @@
 <link rel="import" href="../../app/components/sheet-creation/skills-tab.html">
 <link rel="import" href="../../app/components/sheet-creation/skills-card.html">
 <link rel="import" href="../../app/components/sheet-detail/sheet-detail.html">
+<link rel="import" href="../../app/components/sheet-detail/basic-card.html">
 <link rel="import" href="../../app/components/sheet-detail/resorceslist-card.html">
+<link rel="import" href="../../app/components/sheet-detail/statuslist-card.html">
+<link rel="import" href="../../app/components/sheet-detail/defenseslist-card.html">
+<link rel="import" href="../../app/components/sheet-detail/skillslist-card.html">
